2010-04-20  Mike Frysinger  <vapier@gentoo.org>

	* config/bfin-lex.l (parse_int): Change index() to strchr().

2010-04-16  Nick Clifton  <nickc@redhat.com>

	PR gas/11395
	* config/tc-hppa.c (pa_ip): Do not allow 64-bit add condition
	matcher to accept and unconditional 32-bit add instruction.
	(pa_build_unwind_subspace): Cope with error conditions not
	allowing the start symbol to be set.

2010-04-15  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* config/tc-arm.c (arm_convert_symbolic_attribute): Add support for
	new tag names in v2.08 of ARM ABI.
	* doc/c-arm.texi: Document new tag names in ABI.

2010-04-14  Tristan Gingold  <gingold@adacore.com>

	* config/tc-alpha.c: Includes vms/egps.h on EVAX.
	(s_alpha_comm): Used new EGPS macros from egps.h
	(RGPS__V_NO_SHIFT, EGPS__V_MASK): New local macros.
	(s_alpha_section_word): Add comments.  Use new EGPS macros.
	Adjust for modified bfd_vms_set_section_flags function.

2010-04-10  Alan Modra  <amodra@gmail.com>

	PR gas/11486
	* config/tc-ppc.c (ppc_elf_cons): Clear frag contents.

2010-04-09  Nick Clifton  <nickc@redhat.com>

	* as.c (create_obj_attrs_section): Remove unused variable addr.
	* listing.c (listing_listing): Remove unused variable message.
	* read.c: Remove unnecessary register type qualifiers.
	(s_mri): Only define/use old_flag variable if MRI_MODE_CHANGE is
	defined.

2010-04-07  Eric B. Weddington  <eric.weddington@atmel.com>

	* config/tc-avr.c (mcu_types): Add support for atmega16a, atmega168a,
	atmega164a, atmega165a, atmega169a, atmega169pa, atmega16hva2,
	atmega324a, atmega324pa, atmega325a, atmega3250a, atmega328,
	atmega329a, atmega329pa, atmega3290a, atmega48a, atmega644a,
	atmega645a, atmega645p, atmega6450a, atmega6450p, atmega649a,
	atmega649p, atmega6490a, atmega6490p, atmega64hve, atmega88a,
	atmega88pa, attiny461a, attiny84a, m3000.
	Remove support for atmega8m1, atmega8c1, atmega16c1, atmega4hvd,
	atmega8hvd, attiny327, m3000f, m3000s, m3001b.
	* doc/c-avr.texi: Same.
